# CrabStitch

./: README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs  profiles.rs  stitcher.rs
